--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "description": "A command line tool for running Google Lighthouse tests on a series of URLs and generating a comparative tabular report.",
   "type": "module",
-  "main": "index.js",
+  "main": "cli.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node cli.js"
   },
   "author": "Dylan Ogle",
   "license": "MIT",
@@ -16,5 +16,5 @@
     "cli-progress": "^3.12.0",
     "command-line-args": "^5.2.1"
   },
-  "bin": "index.js"
+  "bin": "cli.js"
 }
