--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "main": "dist/cli.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "build": "tsc",
     "start": "tsc && node dist/cli.js"
   },
@@ -30,6 +30,12 @@
   },
   "homepage": "https://github.com/Deogle/ballista#readme",
   "devDependencies": {
+    "@types/chai": "^4.3.5",
+    "@types/mocha": "^10.0.1",
+    "chai": "^4.3.7",
+    "mocha": "^10.2.0",
+    "ts-node": "^10.9.1",
+    "tslint": "^6.1.3",
     "typescript": "^5.1.6"
   }
 }
