--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A command line tool for running Google Lighthouse tests on a series of URLs and generating a comparative tabular report.",
   "type": "module",
   "main": "dist/src/ballista.js",
+  "types": "dist/src/ballista.d.ts",
   "scripts": {
     "test": "mocha",
     "build": "tsc",
