--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
   "author": "Dylan Ogle",
   "license": "MIT",
   "dependencies": {
+    "@types/uuid": "^9.0.6",
     "chrome-launcher": "^0.15.1",
     "cli-progress": "^3.12.0",
     "command-line-args": "^5.2.1",
     "lighthouse": "^10.0.1",
+    "uuid": "^9.0.1",
     "vite": "^4.4.6"
   },
   "bin": {
